# monstromaker

./: .flake8  .gitignore  .pydocstyle  MANIFEST.in  Pipfile  README.md  dodo.py  pyproject.toml
doc/: api.rst  conf.py  index.rst  user_guide.rst
doc/_static/: custom.css
doc/_templates/: localtoc.html  navigation.html  relations.html
monstromaker/: __main__.py  cards.py  cli.py  deck.py  display.py  game.py  i18n.py  player.py
monstromaker/doc/: Makefile  api.rst  index.rst  user_guide.rst
monstromaker/locales/en_US/LC_MESSAGES/: monstromaker.po
monstromaker/locales/ru_RU/LC_MESSAGES/: monstromaker.po
tests/: __init__.py  conftest.py  test_cards.py  test_cli.py  test_deck.py  test_display.py  test_game.py  test_i18n.py  test_main.py  test_player.py
