[build-system]
requires = ["setuptools>=68", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "monstromaker"
version = "1.0.0"
description = "Монстродел — карточная игра для 2–4 игроков"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "cowsay",
    "babel",
]

[project.scripts]
monstromaker = "monstromaker.__main__:main"

[project.optional-dependencies]
dev = [
    "build",
    "doit",
    "flake8",
    "pydocstyle",
    "sphinx",
    "sphinx-rtd-theme",
    "pytest",
    "pytest-cov",
    "babel",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=monstromaker --cov-report=term-missing --cov-fail-under=75"

[tool.setuptools.packages.find]
where = ["."]
include = ["monstromaker*"]

[tool.setuptools.package-data]
monstromaker = ["locales/**/*"]
